# from-knowledge-tracing-to-preference-tracing

./: .gitignore  LICENSE  README.md  preprocessing.ipynb  pyproject.toml  requirements.txt  window_masking.ipynb
LDA/: LDA.py  README.md  preprocessing_LDA.py  stopwords.csv
baseline/: baseline_performance.py  baseline_performance.sh  generate_atomic_files.py  recbole_baselines.py  user_embedding.py
baseline/configs/: config.yaml  config_DIEN.yaml
baseline/result/: baseline_performance_Topic=20_Dim=32.txt  baseline_performance_Topic=20_Dim=64.txt  baseline_performance_Topic=30_Dim=32.txt  baseline_performance_Topic=30_Dim=64.txt  baseline_performance_Topic=40_Dim=32.txt  baseline_performance_Topic=40_Dim=64.txt
baseline/result/legacy/: baseline_performance_20.txt  baseline_performance_20_emb_32.txt  baseline_performance_30.txt  baseline_performance_30_emb_32.txt  baseline_performance_30_emb_64.txt  baseline_performance_Topic=20_Dim=32.txt  baseline_performance_Topic=20_Dim=64.txt  baseline_performance_Topic=30_Dim=32.txt  baseline_performance_Topic=30_Dim=64.txt  ensemble_performance_30.txt  ensemble_performance_Topic=20_Dim=32.txt  ensemble_performance_Topic=30_Dim=32.txt
bkt/: bkt-rec.ipynb  bkt.py  bkt_preprocessing.py  bkt_viz-journal.ipynb  bkt_viz-proceeding.ipynb  run_experiments.sh  user.py
crawlers/: README.md  imdb_crawler.py  letterboxd_crawler.py  wikipedia_crawler.py
dlkt/: README.md
