[project]
name = "from-knowledge-tracing-to-preference-tracing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "gensim==4.3.2",
    "lightgbm>=4.6.0",
    "nltk==3.8.1",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "pybkt==1.4.1",
    "pykt-toolkit==0.0.38",
    "recbole>=1.2.0",
    "scikit-learn==1.4.2",
    "selenium>=4.31.0",
    "surprise>=0.1",
    "tqdm==4.66.2",
    "wandb==0.16.6",
    "xgboost>=3.0.0",
]
